@@ -38,7 +38,7 @@
  *
  *      %W% (Berkeley) %G%
  *
- * $Id: mount_linux.c,v 1.7 2000/01/12 16:44:41 ezk Exp $
+ * $Id: mount_linux.c,v 1.8 2000/02/07 10:20:18 ionut Exp $
  */
 
 /*
@@ -248,15 +248,21 @@ mount_linux(MTYPE_TYPE type, mntent_t *mnt, int flags, caddr_t data)
 
     /*
      * Linux kernels 2.0.x and earlier used a default NFS read/write size of
-     * 1024 bytes.  2.1 kernels and newer use a 4KB rsize/wsize.
-     * NOTE: 131326 => linux-2.1.0
+     * 1024 bytes.  2.1.86+ kernels and newer use a 4KB rsize/wsize.
      */
-    if (linux_version_code() >= 131326)
+    if (linux_version_code() >= 0x020156)
       nfs_def_file_io_buffer_size = 4096;
     if (!mnt_data->rsize)
       mnt_data->rsize = nfs_def_file_io_buffer_size;
     if (!mnt_data->wsize)
       mnt_data->wsize = nfs_def_file_io_buffer_size;
+#if NFS_MOUNT_VERSION >= 4
+    if (mnt_data->flags & MNT2_NFS_OPT_VER3)
+      memset(mnt_data->old_root.data, 0, FHSIZE);
+    else
+      memcpy(mnt_data->old_root.data, mnt_data->root.data, FHSIZE);
+#endif /* NFS_MOUNT_VERSION >=4 */
+
 #ifdef HAVE_FIELD_NFS_ARGS_T_BSIZE
     /* linux mount version 3 */
     mnt_data->bsize = 0;	/* let the kernel decide */
@@ -281,9 +287,8 @@ mount_linux(MTYPE_TYPE type, mntent_t *mnt, int flags, caddr_t data)
     /*
      * connect() the socket for kernels 1.3.10 and below
      * only to avoid problems with multihomed hosts.
-     * NOTE: 66314 => linux-1.3.10
      */
-    if (linux_version_code() <= 66314) {
+    if (linux_version_code() <= 0x01030a) {
       int ret = connect(mnt_data->fd,
 			(struct sockaddr *) &mnt_data->addr,
 			sizeof(mnt_data->addr));
